--- a/src/App.css
+++ b/src/App.css
@@ -471,7 +471,7 @@ button[type=submit] {
     }
 }
 
-@media only screen and (max-height: 730px) {
+@media only screen and (max-height: 730px) and (max-width: 1200px) {
     .form{
         height: 536px;
     }
